--- a/poster.Rnw
+++ b/poster.Rnw
@@ -87,8 +87,15 @@ Cottbus--Senftenberg, Germany}
     \end{block}
     
     \vfill
+            
        
-    \begin{block}{Figure}
+    \begin{block}{Evaluation of proposed framework}
+    The proposed framework was evaluated in three Monte Carlo experiments (2000 repetitions each experiment) with accordingly 1000, 5000 and 10 000 partitions. During each repetition, a set of partitions was generated using Dube's method (CITATION) with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and to randomly chosen partitions a number of molecules ('Added number of molecules' on Y-axis) was added. Two arrays were compared using proposed method.
+
+    \end{block}
+    \vfill  
+    
+    \begin{block}{Monte Carlo results}
     <<mc_figures, echo = FALSE, message=FALSE,fig.width=12.3,fig.height=30>>=
 p1 <- plot_dpcrtest(test1stats) + ggtitle("1000 partitions")
 p2 <- plot_dpcrtest(test2stats) + ggtitle("2000 partitions")
