--- a/poster.Rnw
+++ b/poster.Rnw
@@ -90,24 +90,23 @@ Cottbus--Senftenberg, Germany}
             
        
     \begin{block}{Evaluation of proposed framework}
-    The proposed framework was evaluated in three Monte Carlo experiments (2000 repetitions each experiment) with accordingly 1000, 5000 and 10 000 partitions. During each repetition, a set of partitions was generated using Dube's method (CITATION) with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and to randomly chosen partitions a number of molecules ('Added number of molecules' on Y-axis) was added. Two arrays were compared using proposed method.
+    The proposed framework was evaluated in three Monte Carlo experiments (2000 repetitions each experiment) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition, a set of partitions was generated using Dube's method (CITATION) with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and to randomly chosen partitions a number of molecules ('Added number of molecules' on Y-axis) was added. Two arrays were compared using proposed method.
 
     \end{block}
     \vfill  
     
     \begin{block}{Monte Carlo results}
-    <<mc_figures, echo = FALSE, message=FALSE,fig.width=12.3,fig.height=30>>=
-p1 <- plot_dpcrtest(mc1000stats) + ggtitle("1000 partitions")
-p2 <- plot_dpcrtest(mc5000stats) + ggtitle("5000 partitions")
-p3 <- plot_dpcrtest(mc10000stats) + ggtitle("10000 partitions")
+    <<mc_figures, echo = FALSE, message=FALSE,fig.width=12.3,fig.height=22>>=
+p1 <- plot_dpcrtest(mc1000stats) + ggtitle("1 000 partitions")
+#p2 <- plot_dpcrtest(mc5000stats) + ggtitle("5000 partitions")
+p3 <- plot_dpcrtest(mc10000stats) + ggtitle("10 000 partitions")
 
 mylegend <-g_legend(p1 + theme(legend.direction="horizontal")) 
 
 grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
-             p2 + guides(fill = FALSE, size = FALSE),
              p3 + guides(fill = FALSE, size = FALSE),
              mylegend,
-             nrow = 4, heights=c(10, 10, 10, 1))
+             nrow = 3, heights=c(10, 10, 1))
 @
 
     \end{block}
