linear model added

--- a/dpcrcits.bib
+++ b/dpcrcits.bib
@@ -1,3 +1,15 @@
+@book{bretz_2010,
+  author = {Bretz, Frank and Hothorn, Torsten and Westfall, Peter},
+  year = 2010,
+  title = {Multiple Comparisons Using {R}},
+  publisher = {Chapman \& Hall/CRC Press},
+  address = {Boca Raton, Florida, USA},
+  isbn = {978--1--58488--574--0},
+  gs = {13234468815185998868},
+  code = {http://CRAN.R-project.org/package=multcomp},
+  data = {http://CRAN.R-project.org/package=multcomp}
+}
+
 
 @article{roberts_will_2014,
 	title = {Will droplet digital {PCR} become the test of choice for detecting and quantifying ocular Chlamydia trachomatis infection? Maybe},
