--- a/poster.Rnw
+++ b/poster.Rnw
@@ -64,7 +64,7 @@ load("dpcrposter_data.RData")
 \author{Micha\l{}  Burdukiewicz\inst{1}, Stefan R\"odiger\inst{2}}
 % \institute{\begin{tabular}[h]{c@{\hskip 4cm}c}
 %       \textsuperscript{1}Department of Genomics & \textsuperscript{2}Institute of Mathematics and Computer Science \\
-%       University of Wroc³aw & Wroc³aw University of Technology
+%       University of Wroc?aw & Wroc?aw University of Technology
 %   \end{tabular}  
 % }
 
@@ -84,7 +84,7 @@ Cottbus--Senftenberg, Germany}
           \parbox[t][\columnheight]{\textwidth}
             {
     \begin{block}{Introduction}
-    We propose a method of comparing results of digital PCR experiments using rigorious statistical approach. A normal approach based on the confidence intervals fails during multiple comparisions, because of the decline of the coverage probability~\cite{dube_mathematical_2008}. On the other hand, methods based on the uncertainty do not take into account number of repetitions which could be used to more accurately estimate parameters~\cite{bhat_single_2009}.
+    We propose a method of comparing results of digital PCR experiments using rigorious statistical approach. An approach based on the confidence intervals~\shortcite{dube_mathematical_2008} fails during multiple comparisions, because of the decline of the coverage probability. On the other hand, methods based on the uncertainty~\shortcite{bhat_single_2009} do not take into account number of repetitions.
     
     \hskip 0.5cm
     
@@ -112,7 +112,7 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
     \vfill  
     
     \begin{block}{Evaluation of proposed framework}
-    The proposed framework was evaluated in three Monte Carlo experiments (each repeated 2000 times) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition, a set of partitions was generated using Dube's method (CITATION) with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and a number of molecules ('Added number of molecules' on Y-axis) was added to randomly chosen partitions. Two arrays were compared using proposed method.
+    The proposed framework was evaluated in three Monte Carlo experiments (2000 times repetitions each) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition, a set of partitions was randomly generated~\shortcite{dube_mathematical_2008} with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and a number of molecules ('Added number of molecules' on Y-axis) was added to randomly chosen partitions. Afterwards, two arrays were compared using proposed method. The p-value of test was saved.
 
     \end{block}
     \vfill  
@@ -131,18 +131,25 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
             {
             
        
-    \begin{block}{Block title}
-    Generalized Linear Models (GLM) allows flexible statistical analysis
+    \begin{block}{Test scheme}
+    Generalized Linear Models (GLM) allows statistical analysis of digital PCR results, by fitting a given probability distribution to the data. The linear model has following form:
+    \begin{equation}
+    \log{Y} = \beta^T X
+    \end{equation}
+    
+    where $Y$ are counts, $X$ are experiments names (categorical data) and $\beta$ are linear model coefficients for every experiment. Moreover, $\exp{\beta} = \lambda$.
+    
+    \hskip 0.5cm
+     
+    Estimated means copies per partitions ($\lambda$) obtained from the model are compared using multiple t-test~\shortcite{bretz_2010}.
+    
 
     \end{block}
     \vfill    
     
     \begin{block}{showcase - rates}
     <<dube_bat, echo = FALSE, message=FALSE,results='asis'>>=
-adpcr1 <- sim_adpcr(m = 10, n = 765, times = 1000, pos_sums = FALSE, n_panels = 3)
-adpcr2 <- sim_adpcr(m = 30, n = 765, times = 1000, pos_sums = FALSE, n_panels = 2)
-dat <- bind_dpcr(adpcr1, adpcr2)
-dpcrtab <- summary(dat, print = FALSE)
+
 print(xtable(dpcrtab[["summary"]][, 1:5]))
 @
 
