--- a/poster.Rnw
+++ b/poster.Rnw
@@ -88,7 +88,7 @@ Cottbus--Senftenberg, Germany}
     
     \hskip 0.5cm
     
-    Our method, based on Generalized Linear Models (GLM) predicts rates of digital PCR experiments using Poisson regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis.
+    Our method, based on Generalized Linear Models (GLM), predicts rates of digital PCR experiments using Poisson regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis.
     \end{block}
     
     \vfill
@@ -112,7 +112,7 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
     \vfill  
     
     \begin{block}{Evaluation of proposed framework}
-    The proposed framework was evaluated in three Monte Carlo experiments (2000 times repetitions each) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition, a set of partitions was randomly generated~\shortcite{dube_mathematical_2008} with determined number of molecules ('Base number of molecules' on X-axis). The set was copied and a number of molecules ('Added number of molecules' on Y-axis) was added to randomly chosen partitions. Afterwards, two arrays were compared using proposed method. The p-value of test was saved.
+    The proposed framework was evaluated in three Monte Carlo experiments (2000 times repetitions each) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition of the Monte Carlo scheme, a set of partitions was randomly generated~\shortcite{dube_mathematical_2008} with a determined number of molecules ('Base number of molecules' on X-axis). The set was copied and a number of molecules ('Added number of molecules' on Y-axis) was added to randomly chosen partitions. Two obtained arrays were compared using proposed method. The p-value of test was saved.
 
     \end{block}
     \vfill  
@@ -143,14 +143,29 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
      
     Estimated means copies per partitions ($\lambda$) obtained from the model are compared using multiple t-test~\shortcite{bretz_2010}.
     
-
     \end{block}
     \vfill    
     
-    \begin{block}{showcase - rates}
+    \begin{block}{Sample run}
+    Ten array digital PCR experiments (765 partitions) were generated. First five have from 9 to 11 molecules in a single array. Last five experiments have from 55 to 65 molecules. All experiments were compared using proposed framework.
+    \end{block}
+    \vfill 
+    
+    
+    \begin{block}{Sample run - results}
     <<dube_bat, echo = FALSE, message=FALSE,results='asis'>>=
+load("ints_plot.RData")
 
-print(xtable(dpcrtab[["summary"]][, 1:5]))
+colnames(ints5[["ints"]]) <- rep(c("lambda", "low", "up"), 3)
+
+# method_names <- c("Dube", "Bhat", "GLM")
+# indat <- do.call(rbind, lapply(0L:2, function(i) {
+#   data.frame(experiment = names(ints5[["real_m"]]),
+#              name = rep(method_names[i + 1], nrow(ints5[["ints"]])), 
+#              real = ints5[["real_m"]],
+#              ints5[["ints"]][, 1L:3+3*i])
+# }))
+
 @
 
     \end{block}
