--- a/dpcrcits.bib
+++ b/dpcrcits.bib
@@ -2652,3 +2652,15 @@
 	keywords = {Amino Acid Substitution, Base Sequence, Colorectal Neoplasms, {DNA} Primers, Fluorescent Dyes, Genes, ras, Humans, Point Mutation, Polymerase Chain Reaction, Proto-Oncogene Proteins p21(ras), Spectrometry, Fluorescence, Taq Polymerase, Transcription, Genetic},
 	pages = {9236--9241}
 }
+
+@manual{burdukiewicz_2014,
+	abstract = {Analysis, visualisation and simulation of digital {PCR} experiments.},
+	author = {Micha\l{}  Burdukiewicz and Stefan R\"odiger},
+	copyright = {{GPL}-2},
+	month = Sep,
+	shorttitle = {{dpcR}},
+	title = {{{dpcR}: Digital {PCR} Analysis}},
+	url = {http://cran.r-project.org/web/packages/dpcR/index.html},
+	urldate = {2014-09-20},
+	year = {2014}
+}
