--- a/poster.Rnw
+++ b/poster.Rnw
@@ -179,7 +179,7 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
     
      
      \begin{block}{Summary}
-     Our method, based on Generalized Linear Models (GLM), predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis. 
+     Our method, based on GLM, predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis. 
     \end{block}
     \vfill 
      
