--- a/poster.Rnw
+++ b/poster.Rnw
@@ -78,14 +78,14 @@ Cottbus--Senftenberg, Germany}
           \parbox[t][\columnheight]{\textwidth}
             {
     \begin{block}{Introduction}
-    Currently, there are no reliable method of comparing results of digital PCR experiments and estimated means copies per partitions ($\lambda$). An approach based on the confidence intervals~\shortcite{dube_mathematical_2008} fails during multiple comparisions, because of the decline of the coverage probability. On the other hand, methods based on the uncertainty~\shortcite{bhat_single_2009} do not take into account number of repetitions. We propose a novel method of comparing results of digital PCR experiments using rigorious statistical approach. 
+    Currently, there are no reliable method of comparing estimated means copies per partitions ($\lambda$). An approach based on the confidence intervals~\shortcite{dube_mathematical_2008} fails during multiple comparisions, because of the decline of the coverage probability. On the other hand, methods based on the uncertainty~\shortcite{bhat_single_2009} do not take into account number of repetitions. We propose a novel method of comparing results of digital PCR experiments using rigorious statistical approach. 
     
     \end{block}
     
     \vfill
             
      \begin{block}{Test scheme}
-    Generalized Linear Models allows creating a linear model for data, where for example response variable has non-normal distributions (as binomially distributed positive partitions in digital PCR experiments). We propose a linear model reflecting relationships in results of digital PCR:
+    Generalized Linear Models (GLM) are linear models for data, where response variable has non-normal distributions (as binomially distributed positive partitions in digital PCR experiments). We propose a linear model reflecting relationships in results of digital PCR:
     \begin{equation}
     \log{Y} = \beta^T X
     \end{equation}
@@ -113,7 +113,7 @@ Cottbus--Senftenberg, Germany}
     
     
     \begin{block}{Sample run - results}
-<<dube_bat, echo = FALSE, message=FALSE,fig.width=12.5,fig.height=15.3>>=
+<<dube_bat, echo = FALSE, message=FALSE,fig.width=12.5,fig.height=12.5>>=
 load("ints_plot.RData")
 
 ggplot(data=indat,aes(x= experiment,y = lambda,col = name))+
@@ -156,6 +156,10 @@ Black triangle marks real value of mean copies per partitions. Colour dots marks
        
     \begin{block}{Evaluation of proposed framework}
     The proposed framework was evaluated in three Monte Carlo experiments (2000 times repetitions each) with accordingly 1000, 5000 (results not shown) and 10 000 partitions. During each repetition of the Monte Carlo scheme, a set of partitions was randomly generated~\shortcite{dube_mathematical_2008} with a determined number of molecules ('Base number of molecules' on X-axis). The set was copied and a number of molecules ('Added number of molecules' on Y-axis) was added to randomly chosen partitions. Two obtained arrays were compared using proposed method and the mean p-values alongside with their standard deviation are presented on chart below.
+    
+    \hskip 0.5cm
+    
+    The evaluation was performed for both Poisson and binomial regression, but for this data  were no significant differences between them.
 
     \end{block}
     \vfill     
@@ -179,7 +183,7 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
     
      
      \begin{block}{Summary}
-     Our method, based on Generalized Linear Models (GLM), predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis. 
+     Our method predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis. 
     \end{block}
     \vfill 
      
