--- a/poster.Rnw
+++ b/poster.Rnw
@@ -101,11 +101,8 @@ Cottbus--Senftenberg, Germany}
     Estimated means copies per partitions obtained from the model are compared each other using multiple t-test~\shortcite{bretz_2010}.
     
     \hskip 0.5cm
-    \end{block}
-    \vfill   
     
-    \begin{block}{Restrictions}
-    The linear model above can be used only when the concentration of template molecules in sample is small (positive partitions contain very rarely more than 1 template particle). In situation when partitions are more saturated with template molecules, binomial regression is more precise.
+    The linear model above can be used only when the concentration of template molecules in sample is small (positive partitions contain very rarely more than 1 template particle). Higher concentrations requires binomial regression.
     
     \end{block}
     \vfill    
@@ -118,7 +115,7 @@ Cottbus--Senftenberg, Germany}
     
 
     \begin{block}{Sample reaction - results}
-<<dube_bat, echo = FALSE, message=FALSE,fig.width=12.5,fig.height=12.5>>=
+<<dube_bat, echo = FALSE, message=FALSE,fig.width=12,fig.height=11>>=
 load("ints_plot.RData")
 
 ggplot(data=indat,aes(x= experiment,y = lambda,col = name))+
@@ -138,11 +135,15 @@ ggplot(data=indat,aes(x= experiment,y = lambda,col = name))+
           legend.direction="horizontal", legend.position = "bottom",
           legend.background = element_rect(fill="NA"))
 @
-Black triangle marks real value of mean copies per partitions. Colored dots marks estimated values of mean copies per partitions. Positions of points are dodged only for purpose of readability.
+\small{Black triangle marks real value of mean copies per partitions. Colored dots marks estimated values of mean copies per partitions. Positions of points are dodged only for purpose of readability.}
     \end{block}
     \vfill 
     
-    
+    \begin{block}{Bibliography}
+      \bibliographystyle{apacite}
+      \bibliography{dpcrcits}
+    \end{block}
+    \vfill
    
             }
         \end{minipage}
@@ -170,7 +171,7 @@ Black triangle marks real value of mean copies per partitions. Colored dots mark
     \vfill     
        
     \begin{block}{Statistical power - Monte Carlo simulations}
-    <<mc_figures, echo = FALSE, message=FALSE,fig.width=14.3,fig.height=24>>=
+    <<mc_figures, echo = FALSE, message=FALSE,fig.width=14.3,fig.height=24.5>>=
 p1 <- plot_dpcrtest(mc1000stats) + ggtitle("1 000 partitions")
 #p2 <- plot_dpcrtest(mc5000stats) + ggtitle("5000 partitions")
 p3 <- plot_dpcrtest(mc10000stats) + ggtitle("10 000 partitions")
@@ -190,16 +191,27 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
      \begin{block}{Summary}
 
      Our method, based on GLM, predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals does not require further correction, because the familywise error is controlled through the whole analysis. 
+     
+     \end{block}
+    \vfill  
+    
+     
+     \begin{block}{pcRuniveRsum - visit our site}
+     
+     \url{http://michbur.github.io/pcRuniveRsum/}$\begin{array}{l}
+        \begin{figure}[ht]
+        \centering
+        \scalebox{0.3}{
+          \includegraphics{pcruniversum_qr.png}
+        }
+        \end{figure}
+      \end{array}
 
     \end{block}
     \vfill 
      
      
-    \begin{block}{Bibliography}
-      \bibliographystyle{apacite}
-      \bibliography{dpcrcits}
-    \end{block}
-    \vfill
+    
             }
         \end{minipage}
       \end{beamercolorbox}
