--- a/poster.Rnw
+++ b/poster.Rnw
@@ -171,7 +171,7 @@ ggplot(data=indat,aes(x= experiment,y = lambda,col = name))+
     \vfill     
        
     \begin{block}{Statistical power - Monte Carlo simulations}
-    <<mc_figures, echo = FALSE, message=FALSE,fig.width=14.3,fig.height=24.5>>=
+    <<mc_figures, echo = FALSE, message=FALSE,fig.width=14.3,fig.height=23.9>>=
 p1 <- plot_dpcrtest(mc1000stats) + ggtitle("1 000 partitions")
 #p2 <- plot_dpcrtest(mc5000stats) + ggtitle("5000 partitions")
 p3 <- plot_dpcrtest(mc10000stats) + ggtitle("10 000 partitions")
@@ -191,7 +191,8 @@ grid.arrange(p1 + guides(fill = FALSE, size = FALSE),
      \begin{block}{Summary}
 
 Our method, based on GLM, predicts estimated means copies per partitions using Poisson or binomial regression. Afterwards, estimates are compared against themselves using t-test. Obtained p-values and confidence intervals do not require further correction, because the familywise error is controlled through the whole analysis. 
-    
+
+This work was funded partially by project 2328/M/WB/14.
      
      \end{block}
     \vfill  
